# onyxia

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  justfile
crates/onyxia-backend-cubecl/: Cargo.toml
crates/onyxia-backend-cubecl/examples/: forward-check.rs
crates/onyxia-backend-cubecl/src/: kernels.rs  lib.rs
crates/onyxia-backend-cubecl/tests/: gpu_test.rs
crates/onyxia-backend-ref/: Cargo.toml
crates/onyxia-backend-ref/src/: lib.rs
crates/onyxia-backend-wgpu/: Cargo.toml
crates/onyxia-backend-wgpu/benches/: kernels.rs
crates/onyxia-backend-wgpu/examples/: forward-check.rs
crates/onyxia-backend-wgpu/legacy-shaders/: README.md  gqa_concat_kv.wgsl  gqa_matmul_qk.wgsl  gqa_reshape_from_heads.wgsl  gqa_softmax_max.wgsl  gqa_softmax_normalize.wgsl  scatter_nd_copy.wgsl  scatter_nd_scatter.wgsl  simplified_layernorm_normalize.wgsl  simplified_layernorm_rms.wgsl  softmax_normalize.wgsl  trilu.wgsl
crates/onyxia-backend-wgpu/legacy-shaders/cast/: cast_f32_u32.wgsl  cast_i64_f32.wgsl  cast_i64_i32.wgsl
crates/onyxia-backend-wgpu/legacy-shaders/elementwise/: max.wgsl
crates/onyxia-backend-wgpu/legacy-shaders/shape/: concat_i64.wgsl  constant_of_shape.wgsl
crates/onyxia-backend-wgpu/legacy-shaders/unary_math/: cos.wgsl
crates/onyxia-backend-wgpu/src/: fused.rs  gpu.rs  kernels.rs  lib.rs  profile.rs  session.rs
crates/onyxia-backend-wgpu/tests/: gpu_test.rs
crates/onyxia-cli/: Cargo.toml
crates/onyxia-cli/examples/: debug-prefill.rs  parity-gate.rs
crates/onyxia-cli/src/: bench.rs  generate.rs  inspect.rs  lib.rs  llm.rs  main.rs  sampling.rs  tokenizer.rs  validate.rs
crates/onyxia-cli/tests/: generation_test.rs  llm_test.rs  tokenizer_test.rs
crates/onyxia-cli/tests.disabled/: llm_test.rs
crates/onyxia-codegen/: Cargo.toml
crates/onyxia-codegen/shaders/activation/: gelu.wgsl
crates/onyxia-codegen/shaders/elementwise/: add.wgsl  mul.wgsl
crates/onyxia-codegen/shaders/matmul/: matmul_f32.wgsl
crates/onyxia-codegen/shaders/normalization/: rmsnorm.wgsl
crates/onyxia-codegen/src/: compiled.rs  error.rs  kernel.rs  lib.rs  plan.rs  scheduler.rs  shaders.rs
crates/onyxia-codegen/src/kernels/: add.rs  gelu.rs  matmul_f32.rs  mod.rs  mul.rs  rmsnorm.rs
crates/onyxia-codegen/tests/: integration_test.rs
crates/onyxia-compiler/: Cargo.toml
crates/onyxia-compiler/shaders/activation/: softmax.wgsl
crates/onyxia-compiler/shaders/elementwise/: greater.wgsl  neg.wgsl  sub.wgsl  where.wgsl
crates/onyxia-compiler/shaders/indexing/: expand.wgsl  slice.wgsl
crates/onyxia-compiler/shaders/matmul/: matmul_q4.wgsl
crates/onyxia-compiler/shaders/reduction/: reducemean.wgsl
crates/onyxia-compiler/src/: inference.rs  lib.rs  operator.rs  plan.rs  shape_inference.rs  symbolic_expr.rs
crates/onyxia-compiler/src/kernels/: concat.rs  div.rs  equal.rs  expand.rs  matmul_nbits.rs  max.rs  mul.rs  neg.rs  range.rs  reducesum.rs  reshape.rs  rmsnorm.rs  scatternd.rs  sin.rs  tanh.rs  transpose.rs  trilu.rs
crates/onyxia-compiler/src/operators/: add.rs  cast.rs  concat.rs  constant.rs  constantofshape.rs  cos.rs  div.rs  equal.rs  expand.rs  gather.rs  gelu.rs  gqa.rs  greater.rs  matmul_f32.rs  matmul_nbits.rs  max.rs  mod.rs  mul.rs  neg.rs  pow.rs  range.rs  reducemean.rs  reducesum.rs  reshape.rs  rmsnorm.rs  rotary_embedding.rs  scatternd.rs  shape.rs  sin.rs  slice.rs  softmax.rs  sqrt.rs  sub.rs  tanh.rs  transpose.rs  trilu.rs  (+2 more)
crates/onyxia-compiler/tests/: integration_test.rs
crates/onyxia-core/: Cargo.toml
crates/onyxia-core/src/: broadcast.rs  compile_ctx.rs  context.rs  descriptor.rs  dispatch.rs  dispatch_dot.rs  gpu_context.rs  ir.rs  ir_builder.rs  lib.rs  memory.rs  operator.rs  pass.rs  plan.rs  registry.rs  shape_inference.rs  symbolic_expr.rs  types.rs
crates/onyxia-ir/: Cargo.toml
crates/onyxia-ir/src/: attrs.rs  backend.rs  builder.rs  decomp.rs  dim.rs  dot.rs  fold.rs  graph.rs  infer.rs  interp.rs  lib.rs  prim.rs  types.rs  validate.rs
crates/onyxia-lower/: Cargo.toml
crates/onyxia-lower/examples/: lower-stats.rs
crates/onyxia-lower/src/: lib.rs  rules.rs
crates/onyxia-lower/tests/: lower_test.rs
crates/onyxia-onnx/: Cargo.toml  build.rs
crates/onyxia-onnx/src/: graph.rs  lib.rs  parser.rs  shape_inference.rs
crates/onyxia-operators/: Cargo.toml
crates/onyxia-operators/shaders/: common.wgsl  gather.wgsl  gqa_mask_scale.wgsl  gqa_matmul_av.wgsl  gqa_repeat_kv.wgsl  gqa_reshape_qkv.wgsl  matmul.wgsl  matmul_nbits.wgsl  range.wgsl  reduce_mean.wgsl  reduce_sum.wgsl  rotary_embedding.wgsl  softmax_exp_sum.wgsl  softmax_max.wgsl  where.wgsl
crates/onyxia-operators/src/: helpers.rs  lib.rs  registry.rs
crates/onyxia-operators/tests/: activation_ops_test.rs  attention_ops_test.rs  cast.rs  cast_ops_test.rs  constant.rs  dispatch_test.rs  elementwise_ops_test.rs  gelu_test.rs  group_query_attention_test.rs  indexing.rs  indexing_ops_test.rs  matmul.rs  matmul_ops_test.rs  normalization_ops_test.rs  reduction.rs  reduction_ops_test.rs  rotary_embedding_test.rs  shape_manipulation.rs  shape_ops_test.rs  simplified_layernorm.rs  slice.rs  softmax.rs  special_ops.rs  unary_math.rs
crates/onyxia-planner/: Cargo.toml
crates/onyxia-planner/src/: inference.rs  kernel.rs  lib.rs  plan.rs  scheduler.rs  shape_inference.rs  symbolic_expr.rs
crates/onyxia-planner/tests/: integration_test.rs
crates/onyxia-runtime/: Cargo.toml
crates/onyxia-runtime/benches/: operator_benchmarks.rs
crates/onyxia-runtime/src/: buffer.rs  buffer_pool.rs  dispatch_executor.rs  error.rs  executor.rs  lib.rs  plan_executor.rs  runtime.rs  tensor.rs
crates/onyxia-runtime/tests/: activation_ops_test.rs  attention_ops_test.rs  cast_ops_test.rs  elementwise_ops_test.rs  indexing_ops_test.rs  integration_test.rs  matmul_ops_test.rs  normalization_ops_test.rs  plan_execution_test.rs  reduction_ops_test.rs  shape_ops_test.rs
demos/gemma-chat/: Cargo.toml  README.md  Trunk.toml  index.html  serve-web.sh
demos/gemma-chat/src/: demo.rs  inference.rs  main.rs  sampling.rs  screenshot.rs  theme.rs  tokenizer.rs
(+144 files in other folders)
