[workspace]
resolver = "3"
members = [
    "crates/onyxia-onnx",
    "crates/onyxia-codegen",
    "crates/onyxia-runtime",
    "crates/onyxia-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/onyxia"

[workspace.dependencies]
# Workspace crates
onyxia-onnx = { path = "crates/onyxia-onnx" }
onyxia-codegen = { path = "crates/onyxia-codegen" }
onyxia-runtime = { path = "crates/onyxia-runtime" }

# External dependencies will be added here via `cargo add --workspace <crate>`
