[workspace]
resolver = "3"
members = [
    "crates/onyxia-onnx",
    "crates/onyxia-compiler",
    "crates/onyxia-runtime",
    "crates/onyxia-cli",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/onyxia"

[workspace.dependencies]
# Workspace crates
onyxia-onnx = { path = "crates/onyxia-onnx" }
onyxia-compiler = { path = "crates/onyxia-compiler" }
onyxia-runtime = { path = "crates/onyxia-runtime" }

# External dependencies will be added here via `cargo add --workspace <crate>`
