[package]
name = "onyxia-cli"
description = "CLI tool for Onyxia - test models, generate graphs, benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "onyxia"
path = "src/main.rs"

[dependencies]
onyxia-onnx.workspace = true
onyxia-codegen.workspace = true
onyxia-runtime.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
pollster = "0.4.0"

[dev-dependencies]
