[package]
name = "onyxia-cli"
description = "CLI tool for Onyxia - test models, generate graphs, benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "onyxia_cli"
path = "src/lib.rs"

[[bin]]
name = "onyxia"
path = "src/main.rs"

[dependencies]
onyxia-onnx.workspace = true
onyxia-planner.workspace = true
onyxia-runtime.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
pollster = "0.4.0"
anyhow = "1.0.101"
tokenizers = "0.22.2"
minijinja = "2.15.1"

[dev-dependencies]
