[package]
name = "onyxia-cli"
description = "CLI tool for Onyxia - test models, generate graphs, benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "onyxia_cli"
path = "src/lib.rs"

[[bin]]
name = "onyxia"
path = "src/main.rs"

[dependencies]
onyxia-core.workspace = true
onyxia-onnx.workspace = true
onyxia-compiler.workspace = true
onyxia-operators.workspace = true
onyxia-runtime.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
pollster = "0.4.0"
anyhow = "1.0.101"
tokenizers = "0.22.2"
minijinja = "2.15.1"
rand = "0.10.0"
regex = "1.12.3"

[dev-dependencies]
