[package]
name = "onyxia-codegen"
description = "WGSL shader compiler and execution graph builder for Onyxia"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
half = "2.7"
onyxia-onnx.workspace = true
petgraph = "0.8"
thiserror = "2.0"
wgcore = "0.2.2"

[dev-dependencies]
