[package]
name = "onyxia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
half = "2.7.1"
naga = "28.0.0"
naga_oil = "0.21.0"
onyxia-onnx.workspace = true
petgraph = "0.8.3"
thiserror = "2.0.18"
tracing = "0.1.44"
wgpu = { version = "28.0.0", features = ["naga-ir"] }

[dev-dependencies]
