[package]
name = "onyxia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
futures-channel = "0.3"
half = "2.7.1"
naga = "29"
naga_oil = "0.22"
onyxia-onnx.workspace = true
petgraph = "0.8.3"
thiserror = "2.0.18"
tracing.workspace = true
wgpu = { version = "29", features = ["naga-ir"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[dev-dependencies]
