[package]
name = "onyxia-lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ONNX frontend for Onyxia: lowers parsed ONNX graphs into the backend-neutral IR."

[dependencies]
onyxia-ir.workspace = true
onyxia-onnx.workspace = true

[dev-dependencies]
