[package]
name = "onyxia-onnx"
description = "ONNX model parser for Onyxia: protobuf into a structured Graph API, with external-data loading"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prost = "0.14.3"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]

[build-dependencies]
prost-build = "0.14.3"
protox = "0.9.1"
