[package]
name = "onyxia-runtime"
description = "GPU executor for compiled Onyxia graphs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.25.0"
futures = "0.3.31"
naga = "28"
onyxia-codegen.workspace = true
onyxia-onnx = { version = "0.1.0", path = "../onyxia-onnx" }
pollster = { version = "0.4.0", features = ["macro"] }
thiserror = "2.0.18"
wgpu = { version = "28", features = ["naga-ir"] }

# Legacy executor still uses naga_oil for runtime shader compilation
# New PlanExecutor uses pre-compiled naga modules from codegen
naga_oil = "0.21"

[dev-dependencies]
