[package]
name = "onyxia-runtime"
description = "GPU executor for compiled Onyxia graphs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.25.0"
futures = "0.3.31"
naga = "28"
onyxia-core.workspace = true
onyxia-onnx.workspace = true
pollster = { version = "0.4.0", features = ["macro"] }
thiserror = "2.0.18"
wgpu = { version = "28", features = ["naga-ir"] }

[dev-dependencies]
onyxia-compiler.workspace = true
onyxia-operators.workspace = true
