[package]
name = "gemma-chat"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "gemma-chat"
path = "src/main.rs"

[dependencies]
onyxia-onnx = { path = "../../crates/onyxia-onnx" }
onyxia-ir = { path = "../../crates/onyxia-ir" }
onyxia-lower = { path = "../../crates/onyxia-lower" }
onyxia-backend-wgpu = { path = "../../crates/onyxia-backend-wgpu" }

# Render egui via wgpu/WebGPU (not glow/WebGL). egui 0.35 uses wgpu 29, matching
# onyxia, so there's a single wgpu in the tree.
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "x11",
    "wayland",
] }
egui = "0.34"
minijinja = "2.15.1"
anyhow = "1.0"
rand = "0.10"
# Cross-platform Instant (std::time::Instant panics on wasm).
web-time = "1"
# Async channels + StreamExt for the inference driver (works native + wasm).
futures = "0.3"
log = "0.4"

# Native-only: full tokenizers + a blocking executor to drive the async runtime.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = "0.22.2"
pollster = "0.4"
env_logger = "0.11"

# Web: tokenizers wasm build, spawn_local, fetch, panic hook, logging.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.22.2", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
# Yield to the browser event loop between blocking load stages so the UI paints.
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
# rand/tokenizers pull getrandom, which needs an explicit backend on wasm
# (also requires --cfg getrandom_backend="wasm_js"; see .cargo/config.toml).
getrandom = { version = "0.4", features = ["wasm_js"] }
